--- a/vcproj/GUP.vcxproj
+++ b/vcproj/GUP.vcxproj
@@ -67,12 +67,13 @@
     <_ProjectFileVersion>12.0.30501.0</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
+    <OutDir>..\bin\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>..\bin64\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>..\bin\</OutDir>
@@ -108,6 +109,17 @@
       <Command>
       </Command>
     </PreLinkEvent>
+    <PostBuildEvent>
+      <Command>copy ..\src\change.log ..\bin\change.log
+copy ..\src\ConfigFiles\gup.xml ..\bin\gup.xml
+copy ..\src\ConfigFiles\getDownLoadUrl.php ..\bin\getDownLoadUrl.php
+copy ..\LICENSE ..\bin\LICENSE
+copy ..\README.md ..\bin\README.md
+copy ..\curl\builds\libcurl-vc14-x86-debug-dll-ipv6-sspi-winssl\bin\libcurl_debug.dll ..\bin\libcurl_debug.dll
+xcopy ..\src\translations ..\bin\translations\ /S /Y /E
+del ..\bin\GUP.iobj
+del ..\bin\GUP.ipdb</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -132,6 +144,17 @@
       <Command>
       </Command>
     </PreLinkEvent>
+    <PostBuildEvent>
+      <Command>copy ..\src\change.log ..\bin\change.log
+copy ..\src\ConfigFiles\gup.xml ..\bin\gup.xml
+copy ..\src\ConfigFiles\getDownLoadUrl.php ..\bin\getDownLoadUrl.php
+copy ..\LICENSE ..\bin\LICENSE
+copy ..\README.md ..\bin\README.md
+copy ..\curl\builds\libcurl-vc14-x86-debug-dll-ipv6-sspi-winssl\bin\libcurl_debug.dll ..\bin\libcurl_debug.dll
+xcopy ..\src\translations ..\bin\translations\ /S /Y /E
+del ..\bin\GUP.iobj
+del ..\bin\GUP.ipdb</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <PreBuildEvent>
@@ -150,7 +173,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>libcurl.lib;comctl32.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\curl\builds\libcurl-vc10-x86-release-dll-ipv6-sspi-winssl\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\curl\builds\libcurl-vc14-x86-release-dll-ipv6-sspi-winssl\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
